--- a/src/posts/touchscreen-css.mdx
+++ b/src/posts/touchscreen-css.mdx
@@ -19,7 +19,7 @@ you app may be unuable on some devices.
 Touch devices are primarily mobile devices, and building a poor mobile
 experience simply isn't an option: [over half of internet traffic comes from mobile
 devices](https://www.consumeraffairs.com/cell_phones/cell-phone-statistics.html#mobile-shopping).
-Let's look at how to use CSS to change our app's behavior, an optimize for a great
+Let's look at how to use CSS to change our app's behavior, and optimize for a great
 user experience across all input methods.
 
 ## Detecting Hover State Availability
@@ -116,7 +116,7 @@ the need for a tooltip all together.
 ## Debugging
 
 You don't want to have to pull out your mobile phone every time you want to test
-these CSS rules and queries. Luckily, the Chrome dev tools allow you to emulate this property
+these CSS rules and queries. Luckily, the Chrome developer tools allow you to emulate this property
 super easily, just by toggling on responsive mode. Here's the desktop version
 of my example:
 
