--- a/src/posts/touchscreen-css.mdx
+++ b/src/posts/touchscreen-css.mdx
@@ -1,7 +1,7 @@
 export const title =
   'Using CSS Media Queries to Optimize for Touchscreen Devices';
 export const slug = 'using-css-media-queries-touchscreen';
-export const tags = ['CSS'];
+export const tags = ['css', 'web'];
 export const description =
   'How to use pure CSS to change your interface on touch-enabled devices for a better user experience';
 export const cover = 'css-touch-cover-compressed.png';
