tweak blog UI and fix type

--- a/src/posts/touchscreen-css.mdx
+++ b/src/posts/touchscreen-css.mdx
@@ -6,6 +6,7 @@ export const description =
   'How to use pure CSS to change your interface on touch-enabled devices for a better user experience';
 export const cover = 'css-touch-cover-compressed.png';
 export const published = new Date(2024, 3, 16);
+export const updated = new Date(2024, 3, 24);
 export const shortCodes = ['css-touch'];
 
 CSS hover effects are nice interactions that add some polish to a web application.
@@ -132,6 +133,6 @@ interfaces and non-touch interfaces.
 ## Conclusion
 
 This is a simple pattern that's highly flexible when creating complex designs.
-It's useful tool for my button hover states, but as you can see, there are are lot more
+It's a useful tool for my button hover states, but as you can see, there are are lot more
 opportunities out there to build some interesting, truly responsive interfaces that
 are accessible to users of all devices.
