improve footer style

--- a/src/posts/react-miami-2024-recap.mdx
+++ b/src/posts/react-miami-2024-recap.mdx
@@ -19,7 +19,7 @@ it to my schedule for future years. A huge thanks to the sponsors, volunteers, a
 and [Jos Gerards](https://twitter.com/josgerards88). Conferences like this are not easy to put on by any means,
 and I appreciate all the work that goes into them every year.
 
-## The Talks
+## First: The Talks
 
 The conference talks at events like this are usually one of the prime attractions. Between CSS tips from [Una](https://twitter.com/Una),
 advice from [Kent C. Dodds](https://twitter.com/kentcdodds) about how to stop lying to your users, or
@@ -96,3 +96,5 @@ ready? This is thanks to some pre-processing to calculate the image's dimensions
 
 > Using `aspect-ratio` ensures that the placeholder takes up the exact amount of space as the final
 > image, and no shifting happens after it's loaded!
+
+## More Than Talks
