--- a/src/posts/react-miami-2024-recap.mdx
+++ b/src/posts/react-miami-2024-recap.mdx
@@ -3,7 +3,8 @@ import { Tweet } from '../components/Tweet';
 export const title = 'React Miami 2024: Recap';
 export const slug = 'react-miami-2024-recap';
 export const tags = ['javascript'];
-export const description = 'A recap of React Miami 2024';
+export const description =
+  'A recap of my time at React Miami 2024: What I learned, what you missed, and why you should come next year';
 export const cover = 'react-miami-recap:cover-warm.png';
 export const published = new Date(2024, 3, 31);
 export const shortCodes = ['miami-24-recap'];
