--- a/src/posts/render-2024-recap.mdx
+++ b/src/posts/render-2024-recap.mdx
@@ -8,7 +8,7 @@ export const published = new Date(2024, 6, 1);
 export const shortCodes = ['render24recap'];
 
 It seems like just yesterday I was at [React Miami](/blog/react-miami-2024-recap), and now here I
-have another conference recap for you! Last month, I attended Render in Atlanta, Georgia and had
+have another conference recap for you! Last month, I attended [Render in Atlanta, Georgia](https://www.renderatl.com/) and had
 a great time! The networking opportunities were great, the talks were engaging, and there
 were plenty of happy hours to go around. 
 
@@ -28,6 +28,23 @@ design systems and Javascript security.
 Working on an internal design system has taught me that a lot of thought goes into building the perfect system
 for your organization's needs. A talk by [Dan Mall](https://danmall.com/) got into the details of what makes a successful
 design system.
+
+Dan talked about creating *your* design system, not just *a* design system. Sometimes, it can be valuable
+and useful to mimic existing solutions, but your design system should be tailored to your organization's needs.
+What works for one organization might not work for you.
+
+Gall's Law came up too, which states that *"All complex systems that work evolved from simpler systems that worked"*. In short,
+don't complicate things too early. If you start with a simple system that works well, you can let it evolve over
+time as needs changed and new complexity is warranted. 
+
+We also learned about picking a system that gets your org excited. Maybe that's a component library in Storybook,
+or maybe it's a simple set of the design guidelines. Maybe it's even as simple as a defined process for design - 
+like Jira templates or a pipeline for reviewing and approving design changes.
+
+The most important thing I took away is to **show examples of what can be made with the system**. Rather than only a bunch
+of disjointed components like icons, buttons, and grid containers, I want to create examples of how our various foundational components
+can fit together in order to make a useful UI. The more examples I can build, the more clear it will be how our
+various components can work together. 
 
 ### CSS: From the Creator Himself
 
@@ -74,4 +91,7 @@ a custom webpage for each conference I go to. This year was [keegan.codes/render
 I took it a step further this time, and printed some stickers with a QR code to this page, via
 my link tracking service so I could track how many scans I got throughout the day.
 
-{/* Photo here  */}
+![My badge with a QR code](badge.png)
+
+> Sticking a QR code on the back of my badge meant I always had it accessible and ready to scan! I also
+> had one on the back of my phone in case I went to an evening event without my badge.
