--- a/src/posts/sasw-2024.mdx
+++ b/src/posts/sasw-2024.mdx
@@ -1,24 +1,26 @@
 export const title =
   'Thriving as a Software Engineer: San Antonio Startup Week 2024';
 export const slug = 'sasw-2024';
-export const tags = ['javascript'];
+export const tags = ['conference', 'opinion', 'web', 'software', 'career'];
 export const description =
-  'I recently spoke on a panel called "Thriving as a Software Engineer." Here are some of my favorite topics!';
+  'I recently spoke on a panel called "Thriving as a Software Engineer." Here are some of my favorite conversations!';
 export const cover = 'sasw2024-cover.png';
 export const published = new Date(2024, 10, 8);
 export const shortCodes = ['sasw-24'];
 
-A couple weeks ago, I was invited to speak on a panel at [San Antonio Startup Week](https://sasw.co/) called _"Thriving as a Shoftware Engineer."_
+A couple weeks ago, I was invited to speak on a panel at [San Antonio Startup Week](https://sasw.co/) called _Thriving as a Software Engineer_.
 The panel was hosted and moderated by [Geeks && Drinks](https://www.meetup.com/meetup-group-umecjcqo/), a local community organization in San Antonio.
 
-Along with my fellow panelists, we discussed the current state of the software industry, including hiring practices,
+Along with my fellow panelists [Marquis Ware](https://www.linkedin.com/in/marquisrware/), [Amanda Keammerer](https://www.linkedin.com/in/keammerer/),
+and moderator [Kedron Abbott](https://www.linkedin.com/in/kedron-abbott/), we discussed the current state of the software industry, including hiring practices,
 the prevalence of AI, and what it looks like trying to get your first job in tech today.
 
 ## AI Hot Takes
 
 As a little ice breaker, we started off talking about AI and any "hot takes" we might have on the topic. I've been pretty
-voval in the past that I'm a big supporter of AI coding auto-complete tools, like GitHub Copilot. Where I lose faith in AI is
-when it's asked to create entire applications, with complex requirements and constraints.
+vocal in the past that I'm a big supporter of AI coding auto-complete tools, like GitHub Copilot. Where I lose faith in AI is
+when it's asked to create entire applications, with complex requirements and constraints. I'm confident my job won't be taken by
+AI any time soon, but it's a powerful tool that I use just about every day (with limits):
 
 <video width="100%" height="auto" controls preload="metadata">
   <source
@@ -28,13 +30,13 @@ when it's asked to create entire applications, with complex requirements and con
   Your browser does not support the video tag.
 </video>
 
-## The Current Landscape
+## The Current Job Landscape
 
 A discussion about the software industry wouldn't be complete without talking about the current state of hiring.
 It's no secret that there is a lot of competition out there for software roles. A lot of that competition is due to the
-state of the market with recent high-profile layoffs at big tech firms, however there are also just more people entering
+state of the market with recent high-profile layoffs at big tech firms, however, there are also simply more people entering
 this field than ever before. With alternate forms of education like coding bootcamps, online learning, or certifications
-that don't require a full computer science degree, breaking into tech is more acessible than ever.
+that don't require a full computer science degree, breaking into tech is more accessible than ever.
 
 This means it's more important than ever to stand out when looking for a job. But, in my opinion, it's easier to do this
 than you might think at first.
@@ -43,12 +45,14 @@ Lately, I've seen an increase in the number of candidates whose skills don't mat
 Now, there's nothing wrong with applying for a job you aren't fully qualified for. In fact, I recommend applying for any job
 that you think might be a fit, even if you don't meet every requirement. However, that's different from lying on a resume.
 
-I've performed a number of interviews in recent years, either for people applying to work on my team, or mock interviews for friends or
+I've performed a number of interviews in recent years, either for people applying to work on my team, or helping with mock interviews for friends or
 students. I've been continually surprised by the number of people who have a whole list of languages on their resume, but can't even
 write one line of code in some of them.
 
 **How to stand out?** Be able to back up what's on paper with hard skills. If you come in with 8 years of experience with JavaScript
-on your resume, be able to demonstrate your skills. Generally, in my experience, that's enough to make you stand out against many
+on your resume, be able to demonstrate your skills. Don't put it on there if you're not prepared to prove you know what you're talking about.
+When I evaluate candidates, someone missing a couple skills that they can be trained on is much less of a red flag than someone who clearly lied.
+Generally, in my experience, that's enough to make you stand out against many
 candidates right off the bat.
 
 <video width="100%" height="auto" controls preload="metadata">
@@ -58,3 +62,77 @@ candidates right off the bat.
   />
   Your browser does not support the video tag.
 </video>
+
+## Staying Relevant in a Fast-Paced Industry
+
+It's no secret that things move fast in the technology industry. New tools are coming out all the time,
+and the landscape is always shifting with regard to what the hot new thing is, or what's popular. Over time,
+the technologies and skills that companies hire for even changes!
+
+I'm a big proponent of using social media professionally. I both post my thoughts (somewhat infrequently these days),
+and read lots of information from others. Here's why reading what others is working on can be so valuable:
+
+A big part of being a good senior+ engineer is having that background of experience where
+when you see a problem, you can recongize it as one you've seen before, and remember a solution. Following along
+on social media with others who are building in public and solving their own problems in real-time can help you quickly
+grow your "knowedge bank" of known issues and solutions, even if you only saw someone else solving it.
+
+I also listen to podcasts and other digital media (YouTube, etc). Being front-end focused these days, I listen to
+the podcast [Syntax.fm](https://syntax.fm/) quite a bit, either while I'm walking my dogs or driving in the car.
+It's a nice way to passively take in new information.
+
+<video width="100%" height="auto" controls preload="metadata">
+  <source
+    src="https://video.static.donley.xyz/stay_up_to_date.mp4"
+    type="video/mp4"
+  />
+  Your browser does not support the video tag.
+</video>
+
+> Note, I mentioned in this clip that I use Twitter/X for a lot of my software news and information. These days,
+> I've moved on to [Bluesky](https://bsky.app/profile/keegan.codes). I like the community better, the platform better,
+> and you can use your own domain as your username! Win win win for me.
+
+## Finding a Good Match for Your Next Role
+
+The age-old question: _"Do I take a job that pays well, or one that I enjoy and fits my career goals?"_ Finding both is the dream of course,
+but how can you balance the two different motivations for getting a job?
+
+I've always been careful not to pigeonhole myself too much in one discipline. My background is in "full-stack" engineering, but that's a bit
+of a loaded term these days, and evokes a sort of "jack of all trades, and master of none" sort of image. Instead, I like to call myself a **product-focused software engineer**.
+I've had roles where I write back-end and front-end code together, some where I build infrastructure and manage kubernetes, and others (like right now) where I'm
+pretty focused on the front-end.
+
+By staying flexible, I'm free to work on things that I find interesting. To a degree, I believe in prioritizing work that is fulfilling and enjoyable,
+but at the end of the day, I need a paycheck, and that needs to be a primary focus too. Flexibility in the type of roles I look for allows me to have a higher
+chance of finding that sweet spot, where a job pays well and is enjoyable.
+
+<video width="100%" height="auto" controls preload="metadata">
+  <source
+    src="https://video.static.donley.xyz/finding_the_right_company.mp4"
+    type="video/mp4"
+  />
+  Your browser does not support the video tag.
+</video>
+
+## Wrapping Up
+
+This was a super fun panel! Huge thanks to Kedron, my fellow panelists, San Antonio Startup Week, and Geeks && Drinks! I've spoken
+on some smaller panels before at my alma mater, but this was my first time doing one at a conference as an official speaker. I'm planning
+more to come in the future, since I really enjoyed chatting during the panel, during the Q&A, and at the after party!
+
+![](panel_group.png)
+
+I've included the most relevant excerpts from my answers here for the blog post, but my fellow panelists had their own takes
+and great answers! If you're interested in the topics here, I recommend checking out the full panel recording! There's also a Q&A at the end
+with some good questions.
+
+<video width="100%" height="auto" controls preload="metadata">
+  <source
+    src="https://video.static.donley.xyz/SASW_2024_full.mp4"
+    type="video/mp4"
+  />
+  Your browser does not support the video tag.
+</video>
+
+If you liked this post, come find me on [Bluesky](https://bsky.app/profile/keegan.codes) to discuss further! Thanks for reading/watching!
