switch to compressed full video

--- a/src/posts/sasw-2024.mdx
+++ b/src/posts/sasw-2024.mdx
@@ -129,7 +129,7 @@ with some good questions.
 
 <video width="100%" height="auto" controls preload="metadata">
   <source
-    src="https://video.static.donley.xyz/SASW_2024_full.mp4"
+    src="https://video.static.donley.xyz/SASW24_compressed_full.mp4"
     type="video/mp4"
   />
   Your browser does not support the video tag.
