add bsky comment simple version

--- a/src/posts/i-own-my-data.mdx
+++ b/src/posts/i-own-my-data.mdx
@@ -9,6 +9,7 @@ export const description =
 export const cover = 'trail-cover.jpg';
 export const published = new Date(2024, 10, 20);
 export const shortCodes = ['my-data'];
+export const bskyThreadId = '3lbfohq2kms2u';
 
 I've never like giving up control of my data and how it's presented. You can see that philosophy
 in how I run this blog, and how I design most of my projects. From the beginning, I knew I wanted
