--- a/src/posts/sasw-2024.mdx
+++ b/src/posts/sasw-2024.mdx
@@ -7,6 +7,7 @@ export const description =
 export const cover = 'sasw2024-cover.png';
 export const published = new Date(2024, 10, 8);
 export const shortCodes = ['sasw-24'];
+export const bskyThreadId = '3lahghz54ak2d';
 
 A couple weeks ago, I was invited to speak on a panel at [San Antonio Startup Week](https://sasw.co/) called _Thriving as a Software Engineer_.
 The panel was hosted and moderated by [Geeks && Drinks](https://www.meetup.com/meetup-group-umecjcqo/), a local community organization in San Antonio.
