--- a/src/posts/template.mdx
+++ b/src/posts/template.mdx
@@ -5,3 +5,4 @@ export const description = 'Description';
 export const cover = 'cover';
 export const published = new Date(yyyy, mm, dd);
 export const shortCodes = ['code'];
+export const bskyThreadId = '';
