--- a/src/posts/2024-in-review.mdx
+++ b/src/posts/2024-in-review.mdx
@@ -8,6 +8,7 @@ export const description =
 export const cover = 'rainbow-2024-cover.png';
 export const published = new Date(2024, 11, 31);
 export const shortCodes = ['2024-review'];
+export const bskyThreadId = '3lenrvn6ub22m';
 
 It's the last day of the year, and in keeping with tradition, I want to take a moment to reflect on 2024!
 
